--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.8'
 
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    networks:
+      - tasker_network
+    depends_on:
+      - mongo
+#    environment:
+#      - SPRING_DATA_MONGODB_URI=mongodb://admin:admin@mongo:27017/tasker?authSource=admin
+
+
   mongo:
     image: mongo:latest
     container_name: mongo
@@ -15,25 +29,9 @@ services:
     networks:
       - tasker_network
 
-  mongo-express:
-    image: mongo-express:latest
-    container_name: mongo-express
-    ports:
-      - "8081:8081"
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongo
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=admin
-      - ME_CONFIG_MONGODB_AUTH_DATABASE=admin
-    depends_on:
-      - mongo
-    networks:
-      - tasker_network
-
 networks:
   tasker_network:
     driver: bridge
 
 volumes:
   mongo-data:
-    driver: local
